--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,41 @@ a {
 
 .navbar nav {
   display: none;
+  position: fixed;
+  z-index: 99999;
+  width: 60%;
+  right: 0;
+  top: 0;
+  background: var(--primary-color);
+  height: 100vh;
+  padding: 1em;
+}
+
+.navbar nav ul.primary-nav {
+  margin-top: 4em;
+}
+
+.navbar nav li a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 0.5em;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.navbar nav li a:hover {
+  font-weight: bold;
+}
+
+.navbar nav .menu-exit {
+  float: right;
+  margin: 0.5em;
+  cursor: pointer;
+}
+
+.navbar nav .enable-block {
+  display: block;
 }
 
 .navbar .container {
@@ -49,6 +84,10 @@ a {
 
 .navbar .menu-nav {
   cursor: pointer;
+}
+
+.navbar .menu-nav {
+  display: block;
 }
 
 a {
@@ -117,7 +156,7 @@ ul {
 }
 
 .past-projects h2 {
-  display: auto;
+  display: block;
   margin: 0;
   padding-top: 1em;
 }
@@ -155,6 +194,7 @@ ul {
 .current-project .current-project-header {
   right: 10%;
   left: 10%;
+  display: block;
   position: absolute;
   z-index: 100;
   text-shadow: 5px 5px 10px black;
