--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,7 @@ a {
         right: 0;
         top: 0;
         background: var(--primary-color);
-        height: 100vh;
+        height: 100%;
         padding: 1em;
         ul.primary-nav {
             margin-top: 4em;
